--- a/view/public/index.html
+++ b/view/public/index.html
@@ -19,10 +19,15 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>Movie booking</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
+    <header>
+      <div class="container" >
+        <div class="row" id="header"></div>
+      </div>
+    </header>
     <div id="root"></div>
     <!--
       This HTML file is a template.
