--- a/view/src/sass/main.scss
+++ b/view/src/sass/main.scss
@@ -1,5 +1,5 @@
 @import "~bootstrap/scss/bootstrap.scss";
-
+@import "~react-responsive-carousel/lib/styles/carousel.min.css";
 header {
     background-color: #242424;
     height: 5.5rem;
